2011-11-16  Razya Ladelsky  <razya@il.ibm.com>
	
	PR tree-optimization/49960
	* tree-data-ref.c (initialize_data_dependence_relation): Add initializations. 
	Remove call to compute_self_dependence.
	(compute_affine_dependence): Remove the !DDR_SELF_REFERENCE condition.
	(compute_self_dependence): Remove old code. Add call to compute_affine_dependence.
	(compute_all_dependences): Remove call to compute_self_dependence. 
	Add call to compute_affine_dependence.

2011-11-16  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	PR middle-end/50325
	* expmed.c (store_bit_field_1): Use extract_bit_field on big
	endian targets if the source cannot be exactly covered by word
	mode chunks.

2011-11-15  Joseph Myers  <joseph@codesourcery.com>

	* config/i386/i386elf.h (ASM_OUTPUT_ASCII): Change STRING_LIMIT to
	ELF_STRING_LIMIT.

2011-11-15  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_pre_atomic_barrier): New.
	(alpha_post_atomic_barrier): New.
	(alpha_split_atomic_op): New memmodel argument; honor it.
	(alpha_split_compare_and_swap): Take array of operands.  Honor
	memmodel; always set bool output
	(alpha_expand_compare_and_swap_12): Similarly.
	(alpha_split_compare_and_swap_12): Similarly.
	(alpha_split_atomic_exchange): Similarly.  Rename from
	alpha_split_lock_test_and_set.
	(alpha_expand_atomic_exchange_12): Similarly.  Rename from
	alpha_expand_lock_test_and_set_12.
	(alpha_split_atomic_exchange_12): Similarly.  Rename from
	alpha_split_lock_test_and_set_12.
	* config/alpha/alpha-protos.h: Update.
	* config/alpha/alpha.md (UNSPECV_CMPXCHG): New.
	* config/alpha/constraints.md ("w"): New.
	* config/alpha/predicates.md (mem_noofs_operand): New.
	* config/alpha/sync.md (atomic_compare_and_swap<mode>): Rename from
	sync_compare_and_swap<mode>; add the new parameters.
	(atomic_exchange<mode>): Update from sync_test_and_set<mode>.
	(atomic_fetch_<op><mode>): Update from sync_old_<op><mode>.
	(atomic_<op>_fetch<mode>): Update from sync_new_<op><mode>.